This changed the original title to "This is a Confusing Title".

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Basic Free HTML5 Templates Page 1 of 11 (Total of 94 Templates) | OS Templates</title>
+    <title>This is a Confusing Title</title>
     <meta name="description" content="Basic Free HTML5 Templates (94 Templates) That Can Be Downloaded From Within The OS Templates Website">
     <meta name="Keywords" content="OS Templates, Free Website Templates, Free Responsive Templates, Free HTML5 Templates, Free CSS Templates, Free Website Layouts, Website Templates, PSD Templates">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
