This changes the body background color from white to aqua.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <link rel="alternate" href="http://feeds.feedburner.com/os-templates" type="application/rss+xml" title="OS Templates on FeedBurner - Latest Templates">
     <link rel="canonical" href="http://www.os-templates.com/free-basic-html5-templates">
 </head>
+
+<style>
+    body {
+        background-color: aqua;
+    }
+</style>
+
 <body id="top">
 <div class="wrapper row0">
     <div id="topbar" class="clear">
