--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 </style>
 
 <body id="top">
+
+<p>This is just the simplest way to add text.</p>
+
 <div class="wrapper row0">
     <div id="topbar" class="clear">
         <div class="fl_left"><a target="_blank" rel="nofollow" class="top-twitter" href="https://twitter.com/ostemplates"><span class="icon-twitter"></span> Follow OS Templates</a></div>
